@@ -49,4 +49,5 @@ kotlin {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
